--- a/front_wor/src/App.css
+++ b/front_wor/src/App.css
@@ -2,6 +2,10 @@
   text-align: center;
 }
 
+p {
+  padding: 10px;
+}
+
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -37,6 +41,6 @@
   }
 }
 
-#table {
+table {
   align-items: center;
 }
