Do styling and Add hide property

--- a/front_wor/src/App.css
+++ b/front_wor/src/App.css
@@ -44,3 +44,11 @@ p {
 table {
   align-items: center;
 }
+
+.weNeedMoreSpace {
+  margin: 10px;
+}
+
+.weNeedMoreSpaceUpDown {
+  margin: 10px 0px;
+}
